# Programmierne2_aufgabe1

./: README.md  load_data.py  power_curve.py  pyproject.toml  sort.py
