[project]
name = "Programmierne2_aufgabe1"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "", email = ""},
]
dependencies = ["numpy>=2.4.4", "matplotlib>=3.10.9"]
requires-python = "==3.14.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
